2016-01-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (set_modified): Plug another memory leak.
	* src/files.c (open_file): Return the fantastic file descriptor
	when opening a non-existent file for reading succeeds.

2016-01-15  Mike Frysinger  <vapier@gentoo.org>
	* src/files.c (open_file): Free the full filename in all cases.

2016-01-14  Benno Schulenberg  <bensberg@justemail.net>
	* doc/nanorc.sample.in: Remove a reference to an obsolete file.
	Reported by Mike Frysinger.
	* src/winio.c (edit_redraw): Delete an 'if' that is always FALSE.
	* src/winio.c (edit_redraw): Elide an unneeded variable and adjust
	some wrappings and whitespace.
	* src/proto.h: Delete two duplicate declarations.
	* src/rcfile.c (check_bad_binding): Elide this unneeded function.
	* src/rcfile.c (parse_binding): Show key only when it was rebound.

2016-01-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (save_poshistory): Reduce the indentation.
	* src/*.c: Adjust a few comments and rewrap some lines.

2016-01-12  Benno Schulenberg  <bensberg@justemail.net>
	* NEWS: Fix some typos and whitespace, and normalize the dates.
	* src/files.c (load_poshistory): Rename a variable.
	* src/files.c (load_poshistory): Remove some code duplication.
	* src/files.c (save_poshistory, update_poshistory, check_poshistory,
	load_poshistory): Differentiate variable name from function names.
	* src/files.c (load_poshistory): Remove a senseless iteration.
	* src/files.c (load_poshistory): Condense the reading of a line.
	* src/files.c (load_poshistory): Reduce the indentation.

GNU nano 2.5.1 - 2016.01.11

2016-01-10  Benno Schulenberg  <bensberg@justemail.net>
	* NEWS: Add item for upcoming 2.5.1.
	* src/nano.c (version), src/winio.c (do_credits), doc/man/rnano.1,
	doc/man/nano.1, doc/man/nanorc.5: Adjust dates and version number.

2016-01-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (precalc_multicolorinfo), src/winio.c (edit_draw):