@@ -1,5 +1,6 @@
 2016-01-15  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (set_modified): Plug another memory leak.
+	* src/files.c (set_modified): Move this function to its habitat.
 	* src/files.c (open_file): Return the fantastic file descriptor
 	when opening a non-existent file for reading succeeds.
 
